--- a/README
+++ b/README
@@ -6,5 +6,5 @@ docker-compose up --build -d
 Open a browser and visit http://127.0.0.1 - Requests should be routed to the backend servers!
 
 # Load test script
-Sends X amount of requests over Y amount of threads and calculates statistics and plots a visualization chart
+Sends X amount of concurrent requests over Y amount of total requests, then calculates statistics and plots a visualization chart
 python3 loadtest.py
